2017-09-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Meson uses msgfmt rather than intltool-merge, so we do not use
	underscore prefixes to mark strings for translation.

	* balsa-mailto-handler.desktop.meson: new file
	* balsa.desktop.meson: ditto
	* sounds/balsa.soundlist.meson: ditto

2017-09-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/meson.build: make balsa and balsa_ab installable.

2017-09-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: fix install directory.
	* ui/meson.build: ditto.

2017-08-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/misc.c (libbalsa_get_domainname): use
	utsname.domainname if it is available.

2017-08-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa.c (libbalsa_init): drop unused call to
	uname.

2017-08-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/send.c (lb_create_pubkey_part):
	g_mime_part_set_content_object is deprecated in favor of
	g_mime_part_set_content.

2017-08-22  Tony Nelson <tonynelson@georgeanelson.com>

	Fix https://bugzilla.redhat.com/show_bug.cgi?id=1483354,
	balsa message window Queue toolbar button sends immediately

	* src/sendmsg-window.c: respect
	balsa_app.always_queue_sent_mail.

2017-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not crash if DSN header is absent

	Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1483355

	* libbalsa/send.c (lbs_process_queue_msg): check for missing
	X-Balsa-DSN header, and do not pass NULL to atoi.

2017-08-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/imap-handle.c (idle_start): assert that the
	  handle is not NULL, to avoid the appearance of dereferencing a
	  NULL pointer.

2017-08-10  Albrecht Dreß

	Crypto-related (mostly) fixes and improvements

	* libbalsa/gmime-multipart-crypt.c: do not qp-encode 7-bit parts for encryption
	* libbalsa/identity.[ch]: implement separate forced signing key id's