@@ -23,7 +23,6 @@ HELP_FILES   = [
                'preferences-mail-options.page',
                'preferences-miscellaneous.page',
                'preferences.page',
- 	       'preferences-spelling.page',
                'preferences-startup.page',
                'toolbar-prefs.page',
                'win-composer.page',
@@ -31,35 +30,48 @@ HELP_FILES   = [
                'win-main.page',
                'win-message.page',
                'win-run-filters.page',
-               'win-search.page',
+               'win-search.page'
                ]
 
-HELP_EXTRA   = 'balsa.entities'
+if spell_checker == 'internal'
+  HELP_FILES += 'preferences-spelling.page'
+endif
+
+HELP_EXTRA   = [
+               'balsa.entities'
+               ]
 
 HELP_MEDIA   = [
-	      'figures/address-book-ldap.png',
-	      'figures/address-book-modify.png',
-	      'figures/address-book.png',
-	      'figures/address-book-vcard.png',
-	      'figures/balsa_logo.png',
-	      'figures/druid-start.png',
-	      'figures/example-alias.png',
-	      'figures/figuresdobaaddress-book-modify.png',
-	      'figures/main-window.png',
-	      'figures/main-window-toolbar.png',
-	      'figures/message-window.png',
-	      'figures/msg-part-select.png',
-	      'figures/newmsg-window-attachments.png',
-	      'figures/newmsg-window.png',
-	      'figures/newmsg-window-toolbar.png',
-	      'figures/preferences-window.png',
-	      'figures/spell-check.png',
-              ]
-
-files = [HELP_EXTRA]
-files += HELP_FILES
+               'figures/address-book-ldap.png',
+               'figures/address-book-modify.png',
+               'figures/address-book.png',
+               'figures/address-book-vcard.png',
+               'figures/balsa_logo.png',
+               'figures/druid-start.png',
+               'figures/example-alias.png',
+               'figures/figuresdobaaddress-book-modify.png',
+               'figures/main-window.png',
+               'figures/main-window-toolbar.png',
+               'figures/message-window.png',
+               'figures/msg-part-select.png',
+               'figures/newmsg-window-attachments.png',
+               'figures/newmsg-window.png',
+               'figures/newmsg-window-toolbar.png',
+               'figures/preferences-window.png',
+               'figures/spell-check.png'
+               ]
 
 gnome.yelp(HELP_ID,
-           sources   : files,
+           sources   : HELP_FILES,
            media     : HELP_MEDIA,
            languages : HELP_LINGUAS)
+
+# Ugly!
+# gnome.yelp needs '--extra : HELP_EXTRA' for included files
+#
+help_install_dir = join_paths(get_option('datadir'), 'help', 'C', 'balsa')
+
+foreach file : HELP_EXTRA
+  install_data(join_paths('C', file),
+               install_dir : help_install_dir)
+endforeach
