@@ -1,3 +1,10 @@
+2017-09-14  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Allow installing the help files
+
+	* meson.build:
+	* src/meson.build:
+
 2017-09-13  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Meson uses msgfmt rather than intltool-merge, so we do not use
